# adw-pinentry

./: .gitignore  AGENT.md  PKGBUILD  README.md  com.kibadda.AdwPinentry.json  flake.nix  meson.build  package-lock.json  package.json  tsconfig.json
apps/pinentry/: meson.build
apps/pinentry/data/: com.kibadda.AdwPinentry.gschema.xml  meson.build
apps/pinentry/data/styles/: style.css
apps/pinentry/src/: com.kibadda.AdwPinentry.in  com.kibadda.AdwPinentry.src.gresource.xml  meson.build  pinentry-adw.in
apps/pinentry/src/ui/: window.ts
data/: com.kibadda.AdwPinentry.data.gresource.xml  com.kibadda.AdwPinentry.desktop.in  meson.build
data/blueprints/: application-window.blp
data/icons/: meson.build
data/styles/: style.css
lib/: meson.build
src/: com.kibadda.AdwPinentry.in  main.ts  meson.build
src/ui/: window.ts
