# Application metadata
app_name = 'pinentry'
app_id = 'com.kibadda.AdwPinentry'
app_resource_path = '/com/kibadda/AdwPinentry'
app_version = '0.1.0'

# Set pkgdatadir specific to this app
app_pkgdatadir = join_paths(get_option('datadir'), 'adw-' + app_name)

# Build subdirectories
subdir('data')
subdir('src')
